[package]
name = "iced_digraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
publish = false

[dependencies]
digraph = { git = "https://github.com/Fee0/digraph.git" }
iced = { version = "0.14.0", default-features = false, features = ["wgpu", "tokio", "image", "canvas"] }
rfd = "0.17.2"
tokio = { version = "1.40", default-features = false, features = ["macros", "rt-multi-thread", "fs", "io-util"] }
